Increasing permgen space for integration testing.